# algorythmie

./: README.md
Devine_le_mot/src/: App.java  Core.java  Utils.java
TP/TP-1/: .gitignore  README.md  note  pyproject.toml
TP/TP-1/result/: comparaison_delete_head.csv  comparaison_delete_mid.csv  comparaison_delete_tail.csv  comparaison_get.csv  comparaison_insert_head.csv  comparaison_insert_mid.csv  comparaison_insert_tail.csv
TP/TP-1/src/tp_1/: __init__.py  benchmark.py  datastructure.py  tests_unitaires.py
TP/TP-2/: rapport.md
TP/TP-3/: README.md  pyproject.toml
TP/TP-3/src/TP3/: __init__.py  interfaces.py  library.py  loan_rules.py  main.py  models.py  observer.py  repositories.py  search_strategies.py  services.py  user_types.py
TP/TP-4/: README.md  TP-4.md  guide.md
test_bigo/: README.md  pyproject.toml
test_bigo/result/: resultats.csv
test_bigo/src/test_bigo/: __init__.py  fonctions.py
