[project]
name = "test-bigo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "dracken24", email = "dracken24@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
test-bigo = "test_bigo:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
