[project]
name = "tp-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "dracken24", email = "dracken24@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
tp-1 = "tp_1:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
