[project]
name = "TP3"
version = "0.1.0"
description = "TP3"
readme = "README.md"
authors = [
    { name = "Vincent Archambault-Bouffard", email = "varchambaultbouffard@cmaisonneuve.qc.ca" }
]
requires-python = ">=3.11"
dependencies = []

[project.scripts]
main = "TP3:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
